@startuml FreightCargo
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #D6EAF8
skinparam classBorderColor #2E86C1
skinparam ArrowColor #1A5276
skinparam Shadowing false

top to bottom direction

' ── Row 1: Users ──
together {
  class User {
    + user_id : BIGSERIAL <<PK>>
    + name : TEXT
    + email : TEXT
    + password : TEXT
    + role_id : INTEGER
  }
  class Admin {
    + user_id : BIGINT <<PK, FK>>
    + admin_level : INTEGER
  }
  class WarehouseStaff {
    + user_id : BIGINT <<PK, FK>>
    + job_title : TEXT
    + shift : TEXT
  }
  class AuditLog {
    + id : BIGSERIAL <<PK>>
    + user_id : BIGINT <<nullable>>
    + action_type : TEXT
    + entity_type : TEXT
    + entity_id : BIGINT <<nullable>>
    + payload : JSONB
    + created_at : TIMESTAMPTZ
  }
}

User <|-- Admin
User <|-- WarehouseStaff
Admin -[hidden]right- WarehouseStaff
WarehouseStaff -[hidden]right- AuditLog
User ..> AuditLog

' ── Row 2: Manages, Location, Carrier, Route ──
together {
  class Manages {
    + admin_user_id : BIGINT <<PK, FK>>
    + warehouse_id : BIGINT <<PK, FK>>
  }
  class Location {
    + location_id : BIGSERIAL <<PK>>
    + location_name : TEXT
    + location_type : TEXT
  }
  class Carrier {
    + carrier_id : BIGSERIAL <<PK>>
    + name : TEXT
    + carrier_type : TEXT
  }
  class Route {
    + route_id : BIGSERIAL <<PK>>
    + estimated_time : INTEGER
  }
}

Manages -[hidden]right- Location
Location -[hidden]right- Carrier
Carrier -[hidden]right- Route

Admin -down-> Manages

' ── Row 3: Warehouse, Shipment ──
together {
  class Warehouse {
    + warehouse_id : BIGSERIAL <<PK>>
    + name : TEXT
    + address : TEXT
    + capacity : INTEGER
    + location_id : BIGINT <<FK>>
  }
  class Shipment {
    + shipment_id : BIGSERIAL <<PK>>
    + shipment_date : DATE
    + status : TEXT
    + carrier_id : BIGINT <<FK>>
    + route_id : BIGINT <<FK>>
    + origin_loc_id : BIGINT <<FK>>
    + destination_loc_id : BIGINT <<FK>>
  }
}

Warehouse -[hidden]right- Shipment

Manages  -down-> Warehouse
Warehouse -down-> Location
Carrier  -down-> Shipment
Route    -down-> Shipment
Location -down-> Shipment

' ── Row 4: InventoryRecord, CargoItem, Container ──
together {
  class InventoryRecord {
    + cargo_id : BIGINT <<PK, FK>>
    + warehouse_id : BIGINT <<PK, FK>>
    + quantity_stored : INTEGER
    + last_updated : TIMESTAMPTZ
  }
  class CargoItem {
    + cargo_id : BIGSERIAL <<PK>>
    + cargo_type : TEXT
    + weight : NUMERIC(12,2)
  }
  class Container {
    + container_id : BIGSERIAL <<PK>>
    + container_type : TEXT
    + max_capacity : NUMERIC(12,2)
    + shipment_id : BIGINT <<FK>>
  }
}

InventoryRecord -[hidden]right- CargoItem
CargoItem -[hidden]right- Container

Warehouse -down-> InventoryRecord
CargoItem -down-> InventoryRecord
Shipment  -down-> Container

' ── Row 5: ContainerCargo ──
class ContainerCargo {
  + cargo_id : BIGINT <<PK, FK>>
  + container_id : BIGINT <<PK, FK>>
}

CargoItem  -down-> ContainerCargo
Container  -down-> ContainerCargo

@enduml
